--- a/cheerful-columns/index.html
+++ b/cheerful-columns/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>cheerful-columns</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>MedicalViewer</title>
+    <meta name="description" content="Write Summary" />
+    <meta name="author" content="Medical" />
     <meta property="og:image" content="/og-image.png" />
   </head>
 
